--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
     <main id="main">
       <!-- Hero -->
+
       <section class="hero">
         <div class="container hero-grid">
           <div class="hero-copy">
@@ -55,33 +56,12 @@
         </div>
       </section>
 
-      <!-- Full banner -->
-      <section class="container" aria-label="Keynote Banner">
-        <figure class="media-wide banner-overlay">
-          <img
-            src="assets/hero-stage.jpg"
-            alt="Dr. Elaine Loo on stage — bringing 5Q insights to global audiences"
-            style="aspect-ratio: 16/6; object-fit: cover"
-            loading="lazy"
-          />
-          <figcaption class="cap">
-            Dr. Elaine Loo on stage — bringing 5Q insights to global audiences.
-            <a
-              target="_blank"
-              rel="noopener"
-              href="https://www.facebook.com/photo?fbid=858902599753510&set=pcb.858903089753461"
-              >See post</a
-            >
-          </figcaption>
-        </figure>
-      </section>
-
       <!-- Intro copy -->
       <section class="intro">
         <div class="container narrow intro-split">
           <figure class="intro-figure">
             <img
-              src="assets/images/dr-elaine-give-talk.jpg"
+              src="assets/images/5q-car.png"
               alt="Dr. Elaine Loo giving a keynote talk"
               loading="lazy"
             />
@@ -104,6 +84,27 @@
             </p>
           </div>
         </div>
+      </section>
+
+      <!-- Full banner -->
+      <section class="container" aria-label="Keynote Banner">
+        <figure class="media-wide">
+          <img
+            src="assets/images/key_speaker.png"
+            alt="Dr. Elaine Loo on stage — bringing 5Q insights to global audiences"
+            style="object-fit: contain"
+            loading="lazy"
+          />
+          <!-- <figcaption class="cap">
+            Dr. Elaine Loo on stage — bringing 5Q insights to global audiences.
+            <a
+              target="_blank"
+              rel="noopener"
+              href="https://www.facebook.com/photo?fbid=858902599753510&set=pcb.858903089753461"
+              >See post</a
+            >
+          </figcaption> -->
+        </figure>
       </section>
 
       <!-- Stats -->
@@ -142,39 +143,165 @@
         <div class="container">
           <h2 class="section-title">Featured In</h2>
           <div class="logo-marquee" aria-hidden="true">
-            <ul class="logo-track">
-              <li><img src="assets/logo-cce.svg" alt="CCE Finland" /></li>
-              <li><img src="assets/logo-unesco.svg" alt="UNESCO" /></li>
-              <li>
-                <img src="assets/logo-britishpedia.svg" alt="Britishpedia" />
-              </li>
-              <li><img src="assets/logo-asean.svg" alt="ASEAN Awards" /></li>
-              <li>
-                <img
-                  src="assets/logo-wcp.svg"
-                  alt="World Council of Psychotherapy"
-                />
-              </li>
-              <!-- duplicate for seamless scroll -->
-              <li><img src="assets/logo-cce.svg" alt="CCE Finland" /></li>
-              <li><img src="assets/logo-unesco.svg" alt="UNESCO" /></li>
-              <li>
-                <img src="assets/logo-britishpedia.svg" alt="Britishpedia" />
-              </li>
-              <li><img src="assets/logo-asean.svg" alt="ASEAN Awards" /></li>
-              <li>
-                <img
-                  src="assets/logo-wcp.svg"
-                  alt="World Council of Psychotherapy"
-                />
-              </li>
-            </ul>
+            <div class="logo-marquee-track">
+              <ul class="logo-strip">
+                <li>
+                  <img
+                    src="assets/images/featured/cce_finland.png"
+                    alt="CCE Finland"
+                  />
+                </li>
+                <li>
+                  <img src="assets/images/Flag_of_UNESCO.png" alt="UNESCO" />
+                </li>
+                <li>
+                  <img
+                    src="assets/images/featured/logo-BO-transparent.png"
+                    alt="Britishpedia"
+                  />
+                </li>
+                <li>
+                  <img src="assets/images/logo-asean.png" alt="ASEAN Awards" />
+                </li>
+
+                <li>
+                  <img
+                    src="assets/images/featured/world_coucil.png"
+                    alt="World Council of Psychotherapy"
+                  />
+                </li>
+                <li>
+                  <img
+                    src="assets/images/featured/feature_3.png"
+                    alt="Feature 3"
+                  />
+                </li>
+                <li>
+                  <img
+                    src="assets/images/featured/feature_4.png"
+                    alt="Feature 4"
+                  />
+                </li>
+                <li>
+                  <img
+                    src="assets/images/featured/feature_5.png"
+                    alt="Feature 5"
+                  />
+                </li>
+                <li>
+                  <img
+                    src="assets/images/featured/feature_6.png"
+                    alt="Feature 6"
+                  />
+                </li>
+                <li>
+                  <img
+                    src="assets/images/featured/feature_7.png"
+                    alt="Feature 7"
+                  />
+                </li>
+                <li>
+                  <img
+                    src="assets/images/featured/feature_8.png"
+                    alt="Feature 8"
+                  />
+                </li>
+                <li>
+                  <img
+                    src="assets/images/featured/feature_9.png"
+                    alt="Feature 9"
+                  />
+                </li>
+                <li>
+                  <img
+                    src="assets/images/featured/feature_10.png"
+                    alt="Feature 10"
+                  />
+                </li>
+                <li>
+                  <img
+                    src="assets/images/featured/feature_11.png"
+                    alt="Feature 11"
+                  />
+                </li>
+                <li>
+                  <img
+                    src="assets/images/featured/feature_12.png"
+                    alt="Feature 12"
+                  />
+                </li>
+                <li>
+                  <img
+                    src="assets/images/featured/feature_13.png"
+                    alt="Feature 13"
+                  />
+                </li>
+                <li>
+                  <img
+                    src="assets/images/featured/feature_14.png"
+                    alt="Feature 14"
+                  />
+                </li>
+              </ul>
+              <ul class="logo-strip" aria-hidden="true">
+                <li>
+                  <img src="assets/images/featured/cce_finland.png" alt="" />
+                </li>
+                <li><img src="assets/images/Flag_of_UNESCO.png" alt="" /></li>
+                <li>
+                  <img
+                    src="assets/images/featured/logo-BO-transparent.png"
+                    alt=""
+                  />
+                </li>
+                <li><img src="assets/images/logo-asean.png" alt="" /></li>
+                <li>
+                  <img src="assets/images/featured/world_coucil.png" alt="" />
+                </li>
+                <li>
+                  <img src="assets/images/featured/feature_3.png" alt="" />
+                </li>
+                <li>
+                  <img src="assets/images/featured/feature_4.png" alt="" />
+                </li>
+                <li>
+                  <img src="assets/images/featured/feature_5.png" alt="" />
+                </li>
+                <li>
+                  <img src="assets/images/featured/feature_6.png" alt="" />
+                </li>
+                <li>
+                  <img src="assets/images/featured/feature_7.png" alt="" />
+                </li>
+                <li>
+                  <img src="assets/images/featured/feature_8.png" alt="" />
+                </li>
+                <li>
+                  <img src="assets/images/featured/feature_9.png" alt="" />
+                </li>
+                <li>
+                  <img src="assets/images/featured/feature_10.png" alt="" />
+                </li>
+                <li>
+                  <img src="assets/images/featured/feature_11.png" alt="" />
+                </li>
+                <li>
+                  <img src="assets/images/featured/feature_12.png" alt="" />
+                </li>
+                <li>
+                  <img src="assets/images/featured/feature_13.png" alt="" />
+                </li>
+                <li>
+                  <img src="assets/images/featured/feature_14.png" alt="" />
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
       </section>
 
       <!-- Media showcase -->
-      <section class="container intro" aria-labelledby="media-show">
+      <!-- <section class="container intro" aria-labelledby="media-show">
         <h2 id="media-show" class="section-title">From stages to stories</h2>
         <figure class="media-wide">
           <img src="assets/ph4.jpg" alt="Highlights across stages and media" />
@@ -220,97 +347,79 @@
             >Discover the 5Q MindVehicle™ Framework</a
           >
         </div>
-      </section>
-
-      <!-- Framework section -->
-      <section
-        id="framework"
-        class="container intro"
-        aria-labelledby="frameworkTitle"
-      >
-        <h2 id="frameworkTitle" class="section-title">
-          The 5Q MindVehicle™ Framework
-        </h2>
-        <figure class="media-wide" aria-label="5Q MindVehicle illustration">
-          <div class="media-wide-box">
-            <div class="mv">5Q MindVehicle™</div>
-            <div class="mv-tags">
-              <span class="pill">IQ</span>
-              <span class="pill">EQ</span>
-              <span class="pill">AQ</span>
-              <span class="pill">SQ</span>
-              <span class="pill">UQ</span>
-            </div>
-          </div>
-          <figcaption class="cap">
-            See how 5Q is transforming education and leadership worldwide.
-          </figcaption>
-        </figure>
-      </section>
+      </section> -->
 
       <!-- Gallery -->
       <section class="gallery" aria-labelledby="galleryTitle">
         <div class="container">
           <div class="gallery-head">
             <h2 id="galleryTitle" class="section-title">Gallery</h2>
-            <div class="pill">Tap an image to open</div>
           </div>
           <div class="gallery-grid" data-lightbox>
-            <a
-              class="gcard"
-              href="https://www.facebook.com/drelaineloo/posts/pfbid02TgK1jog7phvXSoR6i6csc25m8LjuH34BwopbD1BoatcdaY5pUCvV68AmNkfVqdB5l"
-              target="_blank"
-              rel="noopener"
-            >
-              <img src="assets/ph1.jpg" alt="Event moment 1" />
-            </a>
-            <a
-              class="gcard"
-              href="https://www.facebook.com/drelaineloo/posts/pfbid02rns8EKQZic36cNQPmoNV4bePiMdFmH6n4RFHXUV2ADvbCHWtLZEPA7DqRZ6ieYC1l"
-              target="_blank"
-              rel="noopener"
-            >
-              <img src="assets/ph2.jpg" alt="Event moment 2" />
-            </a>
-            <a
-              class="gcard"
-              href="https://www.facebook.com/drelaineloo/posts/pfbid02vPg92HjrSUjR77iurEzeFgWoYbBGeMDErFs8YbfpmBbtopHQe5ibGLwnH1dZ5gZnl"
-              target="_blank"
-              rel="noopener"
-            >
-              <img src="assets/ph3.jpg" alt="Event moment 3" />
-            </a>
-            <a
-              class="gcard"
-              href="https://www.facebook.com/drelaineloo/posts/pfbid04wi7E1uS7opAL88i4qun9Xvc866zt9Fm1fXghPp1LAp8XtfCALvYT8694mj2D5Ugl"
-              target="_blank"
-              rel="noopener"
-            >
-              <img src="assets/ph4.jpg" alt="Event moment 4" />
-            </a>
-            <a
-              class="gcard"
-              href="https://www.facebook.com/drelaineloo/posts/pfbid02m4RuqsGoSRf4tjS5RKkdqQwGvkwsfdASqWSa8Sk4a9Xm7w36u2PBKGpLV4RkSqABl"
-              target="_blank"
-              rel="noopener"
-            >
-              <img src="assets/ph5.jpg" alt="Event moment 5" />
-            </a>
-            <a
-              class="gcard"
-              href="https://www.facebook.com/drelaineloo/posts/pfbid08TH4D2NSSMP4VdgAAPti4fLWezVkkEqVDPeaG9fr6bxdJeKe25NxJze7icCyYYj6l"
-              target="_blank"
-              rel="noopener"
-            >
-              <img src="assets/ph6.jpg" alt="Event moment 6" />
-            </a>
+            <button type="button" class="gcard gallery-item">
+              <img
+                src="assets/images/gallery/gallery_1.jpg"
+                alt="Event moment 1"
+                loading="lazy"
+                data-full="assets/images/gallery/gallery_1.jpg"
+                data-lightbox-group="home-gallery"
+              />
+            </button>
+            <button type="button" class="gcard gallery-item">
+              <img
+                src="assets/images/gallery/gallery_2.jpg"
+                alt="Event moment 2"
+                loading="lazy"
+                data-full="assets/images/gallery/gallery_2.jpg"
+                data-lightbox-group="home-gallery"
+              />
+            </button>
+            <button type="button" class="gcard gallery-item">
+              <img
+                src="assets/images/gallery/gallery_3.jpg"
+                alt="Event moment 3"
+                loading="lazy"
+                data-full="assets/images/gallery/gallery_3.jpg"
+                data-lightbox-group="home-gallery"
+              />
+            </button>
+            <button type="button" class="gcard gallery-item">
+              <img
+                src="assets/images/gallery/gallery_4.jpg"
+                alt="Event moment 4"
+                loading="lazy"
+                data-full="assets/images/gallery/gallery_4.jpg"
+                data-lightbox-group="home-gallery"
+              />
+            </button>
+            <button type="button" class="gcard gallery-item">
+              <img
+                src="assets/images/gallery/gallery_5.jpg"
+                alt="Event moment 5"
+                loading="lazy"
+                data-full="assets/images/gallery/gallery_5.jpg"
+                data-lightbox-group="home-gallery"
+              />
+            </button>
+            <button type="button" class="gcard gallery-item">
+              <img
+                src="assets/images/gallery/gallery_6.jpg"
+                alt="Event moment 6"
+                loading="lazy"
+                data-full="assets/images/gallery/gallery_6.jpg"
+                data-lightbox-group="home-gallery"
+              />
+            </button>
             <a
               class="gcard"
               href="https://www.facebook.com/drelaineloo/posts/pfbid02NNEJHKCzjGhasgYDukZuStr5k4FoDnu9YpEq5sGGqDioSKbwftmr7FJNUAbyfuaGl"
               target="_blank"
               rel="noopener"
             >
-              <img src="assets/ph1.jpg" alt="Event moment 7" />
+              <img
+                src="assets/images/gallery/gallery_7.jpg"
+                alt="Event moment 7"
+              />
             </a>
             <a
               class="gcard"
@@ -318,7 +427,10 @@
               target="_blank"
               rel="noopener"
             >
-              <img src="assets/ph2.jpg" alt="Event moment 8" />
+              <img
+                src="assets/images/gallery/gallery_8.jpg"
+                alt="Event moment 8"
+              />
             </a>
           </div>
         </div>
@@ -327,9 +439,7 @@
       <!-- CTA -->
       <section class="cta-banner">
         <div class="container cta-inner">
-          <h2>
-            Bring globally relevant, research‑backed insight to your event.
-          </h2>
+          <h2>From insight to impact — across cultures and continents.</h2>
           <div>
             <button
               class="btn btn-primary btn-lg"
@@ -338,9 +448,6 @@
             >
               Invite Dr. Elaine
             </button>
-            <a class="btn btn-ghost btn-lg" href="#framework"
-              >Discover the 5Q MindVehicle™</a
-            >
           </div>
         </div>
       </section>
