--- a/programs.html
+++ b/programs.html
@@ -18,10 +18,10 @@
 
     <main id="main">
       <!-- Hero -->
-      <section class="hero">
-        <div class="container hero-grid">
-          <div>
-            <h1 class="display">Practical & Programs</h1>
+      <section class="hero programs-hero">
+        <div class="container hero-grid programs-hero-grid">
+          <div class="programs-hero-copy">
+            <h1 class="display">Practical &amp; Programs</h1>
             <p class="subtitle">Where the 5Q MindVehicle™ comes alive</p>
             <p>
               The 5Q MindVehicle™ Framework exists because the future demands
@@ -39,9 +39,12 @@
               </button>
             </div>
           </div>
-          <figure class="hero-figure" aria-label="Programs in action">
+          <figure
+            class="hero-figure programs-hero-figure"
+            aria-label="Programs in action"
+          >
             <img
-              src="assets/hero-stage.jpg"
+              src="assets/images/audience_speaking.jpg"
               alt="Workshops and speaking bringing 5Q to life"
             />
           </figure>
@@ -49,35 +52,46 @@
       </section>
 
       <!-- ProMizzion – Youth Leadership -->
-      <section class="container intro" aria-labelledby="promizzion">
-        <h2 id="promizzion" class="section-title">
-          ProMizzion — Youth Leadership
-        </h2>
-        <div class="about-grid">
-          <article class="about-card">
-            <h3>Story</h3>
-            <p>
-              Year 2010 born to spark youth leadership, ProMizzion creates
-              environments where teenagers transform confidence into character.
-              By facing real challenges with guided mentorship, they learn that
-              leadership is not about position — it’s about action and meaning.
-            </p>
-            <h3 style="margin-top: 0.75rem">Milestone</h3>
-
-            <h3 style="margin-top: 0.75rem">Outcome</h3>
-            <p>
-              Students grow into resilient, articulate leaders who carry their
-              strengths into both school and society.
-            </p>
-            <div class="cta-row" style="margin-top: 0.5rem">
+      <section
+        class="container intro program-section"
+        aria-labelledby="promizzion"
+      >
+        <div class="section-head">
+          <h2 id="promizzion" class="section-title">
+            ProMizzion — Youth Leadership
+          </h2>
+        </div>
+        <div class="program-layout">
+          <article class="about-card program-card">
+            <div class="program-block">
+              <h3 class="meta-title">Story</h3>
+              <p>
+                Year 2010 born to spark youth leadership, ProMizzion creates
+                environments where teenagers transform confidence into
+                character. By facing real challenges with guided mentorship,
+                they learn that leadership is not about position — it’s about
+                action and meaning.
+              </p>
+            </div>
+            <div class="program-block">
+              <h3 class="meta-title">Milestone</h3>
+            </div>
+            <div class="program-block">
+              <h3 class="meta-title">Outcomes</h3>
+              <p>
+                Students grow into resilient, articulate leaders who carry their
+                strengths into both school and society.
+              </p>
+            </div>
+            <div class="program-cta">
               <button id="open-booking-2" class="btn btn-ghost" type="button">
                 Discover how to launch a ProMizzion chapter
               </button>
             </div>
           </article>
-          <figure class="media-wide" style="margin: 0">
+          <figure class="media-wide media-tight">
             <img
-              src="assets/ph1.jpg"
+              src="assets/images/elainelooo.jpg"
               alt="Teens presenting projects and mentoring peers"
             />
             <figcaption class="cap">“Lead Beyond.”</figcaption>
@@ -86,44 +100,47 @@
       </section>
 
       <!-- DeEmcee – Children’s Public Speaking -->
-      <section class="container intro" aria-labelledby="deemcee">
-        <h2 id="deemcee" class="section-title">
-          DeEmcee — Children’s Public Speaking
-        </h2>
-        <div class="about-grid">
-          <figure class="media-wide" style="margin: 0">
+      <section
+        class="container intro program-section"
+        aria-labelledby="deemcee"
+      >
+        <div class="section-head">
+          <h2 id="deemcee" class="section-title">
+            DeEmcee — Children’s Public Speaking
+          </h2>
+        </div>
+        <div class="program-layout program-layout--flip">
+          <figure class="media-wide media-tight">
             <img
-              src="assets/ph4.jpg"
+              src="assets/images/elainelooo.jpg"
               alt="DeEmcee founder addressing children and parents"
             />
             <figcaption class="cap">DeEmcee founder’s message.</figcaption>
           </figure>
-          <article class="about-card">
-            <h3>Story</h3>
-            <p>
-              In year 2018, DeEmcee is an award‑winning public speaking
-              franchise that transforms stage fright into stage presence.
-              Children learn to discover their voice, speak with courage, and
-              grow through both structured yet creative thematic setting.
-            </p>
-            <h3 style="margin-top: 0.75rem">Milestone</h3>
-            <p>Xxxxx waiting director group</p>
-            <h3 style="margin-top: 0.75rem">Outcome</h3>
-            <p>
-              Children gain confidence, parents witness transformation, and
-              communities raise a generation ready to speak with clarity and
-              courage as foundation of global citizenship.
-            </p>
-            <figure class="media-wide">
-              <img
-                src="assets/ph3.jpg"
-                alt="Children on stage with proud parents in the audience"
-              />
-              <figcaption class="cap">
-                “Confidence that begins with unique voices.”
-              </figcaption>
-            </figure>
-            <div class="cta-row" style="margin-top: 0.5rem">
+          <article class="about-card program-card">
+            <div class="program-block">
+              <h3 class="meta-title">Story</h3>
+              <p>
+                In year 2018, DeEmcee is an award‑winning public speaking
+                franchise that transforms stage fright into stage presence.
+                Children learn to discover their voice, speak with courage, and
+                grow through both structured yet creative thematic setting.
+              </p>
+            </div>
+            <div class="program-block">
+              <h3 class="meta-title">Milestone</h3>
+              <p>Xxxxx waiting director group</p>
+            </div>
+            <div class="program-block">
+              <h3 class="meta-title">Outcome</h3>
+              <p>
+                Children gain confidence, parents witness transformation, and
+                communities raise a generation ready to speak with clarity and
+                courage as foundation of global citizenship.
+              </p>
+            </div>
+
+            <div class="program-cta">
               <button id="open-booking-2" class="btn btn-primary" type="button">
                 Explore DeEmcee franchise opportunities
               </button>
@@ -133,79 +150,84 @@
       </section>
 
       <!-- Parents First – Parental Education & Leadership -->
-      <section class="container intro" aria-labelledby="parents-first">
-        <h2 id="parents-first" class="section-title">
-          Parents First — Parental Education & Leadership
-        </h2>
-        <div class="about-grid">
-          <article class="about-card">
-            <h3>Story</h3>
-            <p>
-              Parenting is the first and most important form of leadership.
-              Parents First equips mothers, fathers, and even corporate leaders
-              with cognitive science‑informed, practical tools to strengthen
-              their own 5Q MindVehicle — advancing humankind.
-            </p>
-            <h3 style="margin-top: 0.75rem">Achievements & Milestones</h3>
-            <ul>
-              <li>
-                <strong>2021 – Early Vision:</strong> Scientific and artistic
-                parenting education; launched 4Q framework.
-              </li>
-              <li>
-                <strong>2022 – Expansion:</strong> Introduced 5Q Course (adding
-                UQ); listed in Britishpedia Successful People in Malaysia.
-              </li>
-              <li>
-                <strong>2023 – Professional Certification & Awards:</strong>
-                First Professional Certification in Parental Education
-                (University Malaya‑accredited); ASEAN Professional Award;
-                BabyTalk MamaPapa Award.
-              </li>
-              <li>
-                <strong
-                  >2024 – International Accreditation & Corporate
-                  Training:</strong
-                >
-                5Q Accreditation by CCE Finland; HRD Corp‑approved training
-                provider; Launched 6Q Quantum Communication & Social Science
-                Course.
-              </li>
-              <li>
-                <strong>2025 – Global Excellence:</strong> CCE Finland Best
-                Curriculum Design Innovation Award; CCE Finland Best Skill
-                Development Centre Award; 6Q Professional Diploma accredited by
-                CMA (UK).
-              </li>
-            </ul>
-            <h3 style="margin-top: 0.75rem">Outcome</h3>
-            <p>
-              Adults feel empowered, children thrive, and families break cycles
-              of pressure with resilience and joy.
-            </p>
-            <div class="cta-row" style="margin-top: 0.5rem">
+      <section
+        class="container intro program-section"
+        aria-labelledby="parents-first"
+      >
+        <div class="section-head">
+          <h2 id="parents-first" class="section-title">
+            Parents First — Parental Education &amp; Leadership
+          </h2>
+        </div>
+        <div class="program-layout">
+          <article class="about-card program-card">
+            <div class="program-block">
+              <h3 class="meta-title">Story</h3>
+              <p>
+                Parenting is the first and most important form of leadership.
+                Parents First equips mothers, fathers, and even corporate
+                leaders with cognitive science‑informed, practical tools to
+                strengthen their own 5Q MindVehicle — advancing humankind.
+              </p>
+            </div>
+            <div class="program-block">
+              <h3 class="meta-title">Achievements &amp; Milestones</h3>
+              <ul class="meta-list">
+                <li>
+                  <strong>2021 – Early Vision:</strong> Scientific and artistic
+                  parenting education; launched 4Q framework.
+                </li>
+                <li>
+                  <strong>2022 – Expansion:</strong> Introduced 5Q Course
+                  (adding UQ); listed in Britishpedia Successful People in
+                  Malaysia.
+                </li>
+                <li>
+                  <strong
+                    >2023 – Professional Certification &amp; Awards:</strong
+                  >
+                  First Professional Certification in Parental Education
+                  (University Malaya‑accredited); ASEAN Professional Award;
+                  BabyTalk MamaPapa Award.
+                </li>
+                <li>
+                  <strong
+                    >2024 – International Accreditation &amp; Corporate
+                    Training:</strong
+                  >
+                  5Q Accreditation by CCE Finland; HRD Corp‑approved training
+                  provider; Launched 6Q Quantum Communication &amp; Social
+                  Science Course.
+                </li>
+                <li>
+                  <strong>2025 – Global Excellence:</strong> CCE Finland Best
+                  Curriculum Design Innovation Award; CCE Finland Best Skill
+                  Development Centre Award; 6Q Professional Diploma accredited
+                  by CMA (UK).
+                </li>
+              </ul>
+            </div>
+            <div class="program-block">
+              <h3 class="meta-title">Outcomes</h3>
+              <p>
+                Adults feel empowered, children thrive, and families replace
+                pressure with resilience and joy.
+              </p>
+            </div>
+            <div class="program-cta">
               <button id="open-booking-2" class="btn btn-ghost" type="button">
                 Empower parents with Parents First certification
               </button>
             </div>
           </article>
-          <div>
-            <figure class="media-wide" style="margin: 0 0 1rem 0">
+          <div class="program-gallery">
+            <figure class="media-wide media-tight">
               <img
-                src="assets/ph5.jpg"
+                src="assets/images/elainelooo.jpg"
                 alt="Parents First program — workshop snapshot"
               />
               <figcaption class="cap">
                 Parents First — learning that transforms families.
-              </figcaption>
-            </figure>
-            <figure class="media-wide" style="margin: 0">
-              <img
-                src="assets/ph2.jpg"
-                alt="Parents in workshops, certification ceremonies, collaborations"
-              />
-              <figcaption class="cap">
-                “When parents grow, families flourish.”
               </figcaption>
             </figure>
           </div>
@@ -213,42 +235,53 @@
       </section>
 
       <!-- KidZutopia – Early Childhood Learning -->
-      <section class="container intro" aria-labelledby="kidzutopia">
-        <h2 id="kidzutopia" class="section-title">
-          KidZutopia — Early Childhood Learning
-        </h2>
-        <div class="about-grid">
-          <figure class="media-wide" style="margin: 0">
+      <section
+        class="container intro program-section"
+        aria-labelledby="kidzutopia"
+      >
+        <div class="section-head">
+          <h2 id="kidzutopia" class="section-title">
+            KidZutopia — Early Childhood Learning
+          </h2>
+        </div>
+        <div class="program-layout program-layout--flip">
+          <figure class="media-wide media-tight">
             <img
-              src="assets/ph6.jpg"
+              src="assets/images/elainelooo.jpg"
               alt="Children in playful learning environments with bright colors"
             />
             <figcaption class="cap">
               “Nurturing curiosity and courage in every child.”
             </figcaption>
           </figure>
-          <article class="about-card">
-            <h3>Story</h3>
-            <p>
-              Childhood is the foundation of lifelong learning. KidZutopia
-              designs early brain activation and play‑based programs that
-              nurture curiosity, empathy, and courage in young children.
-            </p>
-            <h3 style="margin-top: 0.75rem">Achievements & Awards</h3>
-            <ul>
-              <li>Endorsed by CCE Finland.</li>
-              <li>Winner of Best MamaPapa Recognition.</li>
-              <li>
-                Recognized for innovative child‑centered approaches in early
-                learning.
-              </li>
-            </ul>
-            <h3 style="margin-top: 0.75rem">Outcome</h3>
-            <p>
-              Children grow into eager learners and enter school with joy
-              instead of fear.
-            </p>
-            <div class="cta-row" style="margin-top: 0.5rem">
+          <article class="about-card program-card">
+            <div class="program-block">
+              <h3 class="meta-title">Story</h3>
+              <p>
+                Early childhood sets the tone for lifelong learning. KidZutopia
+                designs sensory-rich, play-based environments that help young
+                children build empathy, resilience, and joyful curiosity.
+              </p>
+            </div>
+            <div class="program-block">
+              <h3 class="meta-title">Achievements &amp; Awards</h3>
+              <ul class="meta-list">
+                <li>Endorsed by CCE Finland.</li>
+                <li>Winner of Best MamaPapa Recognition.</li>
+                <li>
+                  Recognized for innovative child‑centered approaches in early
+                  learning.
+                </li>
+              </ul>
+            </div>
+            <div class="program-block">
+              <h3 class="meta-title">Outcomes</h3>
+              <p>
+                Children fall in love with learning, enter school with
+                confidence, and thrive emotionally and socially.
+              </p>
+            </div>
+            <div class="program-cta">
               <button id="open-booking-2" class="btn btn-primary" type="button">
                 Bring KidZutopia to your community
               </button>
@@ -258,33 +291,19 @@
       </section>
 
       <!-- Why It Matters -->
-      <section class="container intro" aria-labelledby="why-programs">
-        <h2 id="why-programs" class="section-title">Why It Matters</h2>
-        <p>
-          These programs are not just initiatives — they are ecosystems of
-          transformation. Together, they show how science, creativity, and human
-          connection can equip the next generation to turn inner potential into
-          global impact.
-        </p>
-        <figure class="media-wide">
-          <img
-            src="assets/ph4.jpg"
-            alt="Programs touching families, classrooms, and communities"
-          />
-        </figure>
-      </section>
 
-      <section class="cta-banner">
+      <section
+        class="cta-banner programs-cta"
+        aria-labelledby="programs-cta-title"
+      >
         <div class="container cta-inner">
-          <h2>Bring these programs to your school or community</h2>
-          <div>
-            <button
-              id="open-booking-2"
-              class="btn btn-primary btn-lg"
-              type="button"
-            >
-              Start a conversation
-            </button>
+          <div class="section-head">
+            <h2 id="why-programs" class="section-title">Why It Matters</h2>
+            <p class="section-lead">
+              These programs form an ecosystem of transformation — blending
+              science, creativity, and human connection so the next generation
+              can turn inner potential into global impact.
+            </p>
           </div>
         </div>
       </section>
