--- a/connect.html
+++ b/connect.html
@@ -11,19 +11,16 @@
       rel="stylesheet"
     />
   </head>
-  <body class="page-connect" data-page="connect">
+  <body class="page-connect1" data-page="connect">
     <a class="skip-link" href="#main">Skip to main content</a>
 
     <div data-include="partials/header.html"></div>
 
     <main id="main">
-      <section class="hero connect-hero">
+      <section class="hero">
         <div class="container hero-grid">
-          <div class="connect-hero-copy">
-            <span class="hero-tag">Collaboration Starts Here</span>
-            <h1 class="display">
-              Why <span class="hero-highlight">Connect</span>
-            </h1>
+          <div>
+            <h1 class="display">Why Connect</h1>
             <p class="subtitle">
               When more parents, educators, and leaders live with 5Q, the next
               generation grows stronger — not in competition, but in
@@ -38,15 +35,15 @@
               >
                 📩 Book a Strategic Collaboration Call →
               </button>
-              <a
-                class="btn btn-ghost"
-                href="https://www.drelaineloo.com"
-                target="_blank"
-                rel="noopener"
-                >🌐 www.drelaineloo.com</a
-              >
             </div>
           </div>
+
+          <figure class="hero-figure">
+            <img
+              src="assets/images/elaine_talk.jpg"
+              alt="Dr Elaine speaking on stage"
+            />
+          </figure>
         </div>
       </section>
 
@@ -120,7 +117,9 @@
       <section class="engage" aria-labelledby="engage-title">
         <div class="container engage-inner">
           <div class="engage-header">
-            <h2 id="engage-title" class="section-title">Let’s Make It Happen</h2>
+            <h2 id="engage-title" class="section-title">
+              Let’s Make It Happen
+            </h2>
             <div class="cta-row">
               <a
                 class="btn btn-primary"
@@ -143,9 +142,7 @@
               <li>
                 <strong>Facebook</strong> – Impact stories &amp; live updates
               </li>
-              <li>
-                <strong>Instagram</strong> – Behind-the-scenes and events
-              </li>
+              <li><strong>Instagram</strong> – Behind-the-scenes and events</li>
               <li>
                 <strong>LinkedIn</strong> – Research, thought leadership &amp;
                 professional collaborations
