--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       <section class="container" aria-label="Keynote Banner">
         <figure class="media-wide">
           <img
-            src="assets/images/key_speaker.png"
+            src="assets/images/keyspeaker.jpg"
             alt="Dr. Elaine Loo on stage — bringing 5Q insights to global audiences"
             style="object-fit: contain"
             loading="lazy"
