--- a/index.html
+++ b/index.html
@@ -410,28 +410,24 @@
                 data-lightbox-group="home-gallery"
               />
             </button>
-            <a
-              class="gcard"
-              href="https://www.facebook.com/drelaineloo/posts/pfbid02NNEJHKCzjGhasgYDukZuStr5k4FoDnu9YpEq5sGGqDioSKbwftmr7FJNUAbyfuaGl"
-              target="_blank"
-              rel="noopener"
-            >
+            <button type="button" class="gcard gallery-item">
               <img
                 src="assets/images/gallery/gallery_7.jpg"
                 alt="Event moment 7"
+                loading="lazy"
+                data-full="assets/images/gallery/gallery_7.jpg"
+                data-lightbox-group="home-gallery"
               />
-            </a>
-            <a
-              class="gcard"
-              href="https://www.facebook.com/drelaineloo/posts/pfbid02NkWUNfB27qWhnw7GNHPXxbihY9AtF8BX7vHuEFXJMsNiAikv2SJmQ2mjcfgiBdExl"
-              target="_blank"
-              rel="noopener"
-            >
+            </button>
+            <button type="button" class="gcard gallery-item">
               <img
                 src="assets/images/gallery/gallery_8.jpg"
                 alt="Event moment 8"
+                loading="lazy"
+                data-full="assets/images/gallery/gallery_8.jpg"
+                data-lightbox-group="home-gallery"
               />
-            </a>
+            </button>
           </div>
         </div>
       </section>
