--- a/about_me.html
+++ b/about_me.html
@@ -108,7 +108,7 @@
         </p>
         <figure class="media-wide" aria-label="5Q MindVehicle illustration">
           <img
-            src="assets/images/fiveq.png"
+            src="assets/images/5Q_Brain.png"
             alt="Dr. Elaine speaking on stage to a packed audience"
           />
           <figcaption class="cap">
